--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,8 @@
   
 <!-- <button id="next">Next</button> -->
 <div id="all-divs">
+
+
 <div class = "step" id="step-0">
 <div class = "start">
 	  <div class = "left-half">	
@@ -46,97 +48,302 @@
 <button id="singlebutton" class="btn btn-default center-block btn-lg" type="submit" >Lets Go</button>
   <br>
 </div>
-<div class="step" id="step-1">
-<h2>What platform will your apps run on?</h2>
-  <p class="select">(Select all that apply)</p>  
-<div class="theme-five" id="first-div">
- 		<div class="div1 multiple-click" id="platform_iOS"> 	
-	    	<div class="imagecontainer" id="ypyo">
+
+<!-- First page -->
+<div class="container-fluid step" id="step-1">
+ <div class="row">
+    <div class="col-md-12"><h2>What platform will your apps run on?</h2>
+  <p class="select">(Select all that apply)</p> </div>
+</div>
+ <div class="row theme-five" id="first-page">
+   <div class="col-md-1"></div>
+   <div class="col-md-2 col-sm-4 col-xs-4"><div class="div1 multiple-click" id="platform_iOS"> 	
+	    	<div class="imagecontainer">
 	    		<img src="/img/Assets/Landing-Page/Step-1/iOS.png" class = "imgclass"/>
 	    	</div>
 	    	<p>iOS</p>
-	    </div>
-	    <div class="div2 multiple-click" id="platform_Android"> 	
+	    </div></div>
+   <div class="col-md-2 col-sm-4 col-xs-4"><div class="div2 multiple-click" id="platform_Android"> 	
 	    	<div class="imagecontainer">
 	    		<img src="/img/Assets/Landing-Page/Step-1/Android.png" class = "imgclass"/>
 	    	</div>
 	    	<p>Android</p>
-	    </div>
-	    <div class="div3 multiple-click" id="platform_Windows"> 	
+	    </div></div>
+   <div class="col-md-2 col-sm-4 col-xs-4">
+   	 <div class="div3 multiple-click" id="platform_Windows"> 	
 	    	<div class="imagecontainer">
 	    		<img src="/img/Assets/Landing-Page/Step-1/Windows.png" class = "imgclass"/>
 	    	</div>
 	    	<p>Windows</p>
 	    </div>
-	    <div class="div4 multiple-click" id="platform_Blackberry"> 	
+   </div>
+   <div class="col-md-2 col-sm-6 col-xs-6">
+   	 <div class="div4 multiple-click" id="platform_Blackberry"> 	
 	    	<div class="imagecontainer">
 	    		<img src="/img/Assets/Landing-Page/Step-1/Blackberry.png" class = "imgclass"/>
 	    	</div>
 	    	<p>Blackberry</p>
 	    </div>
-	    <div class="div5 multiple-click" id="platform_Web"> 	
+   </div>
+   <div class="col-md-2 col-sm-6 col-xs-6">
+   	
+   	<div class="div5 multiple-click" id="platform_Web"> 	
 	    	<div class="imagecontainer">
 	    		<img src="/img/Assets/Landing-Page/Step-1/Web.png" class = "imgclass"/>
 	    	</div>
 	    	<p>Web</p>
 	    </div>
-    </div>
-    <div>
-    	 <span class="glyphicon glyphicon-menu-left"></span>
-    	 <span>Prev</span>
-    	 <!-- <span class="triangle-up"></span> -->
-    	 <span class="space"></span>
-    	 <span class="next-text">Next</span>
+   </div>
+   <div class="col-md-1"></div>
+ </div>
+
+<div class="row">
+     <div class="col-md-4"><span class="glyphicon glyphicon-menu-left prev"></span>
+     <span class="prev">Prev</span></div>
+     <!-- <div class="col-md-3 triangle-up"></div> -->
+     <div class="col-md-4">
+     	<span class="next-text">Next</span>
     	 <span class="glyphicon glyphicon-menu-right next-icon" id="next"></span>
-    </div>
-  </div>
-  <div class="step" id="step-2">
-  <h2>How big is your app going to be?</h2>
-    <div class="theme-four" id="third-div">
- 		<div class="div9 a" id="userManagement_none"> 	
+     </div>
+ </div>
+</div> 
+
+<!-- second-page -->
+<div class="container-fluid step" id="step-2">
+ <div class="row">
+    <div class="col-md-12"><h2>How big is your app going to be?</h2> </div>
+</div>
+ <div class="row theme-three" id="second-page">
+   <div class="col-md-3"></div>
+   <div class="col-md-2 col-sm-4 col-xs-4">
+   	<div class="div6 single-click" id="size_small" value="100"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing-Page/Step-2/small.png" class = "imgclass"/>
+		    	</div>
+		    	<p>Small</p>
+		    	<span class="inner_span">(1-3 Screens)</span>
+		    </div>
+   </div>
+   <div class="col-md-2 col-sm-4 col-xs-4"><div class="div7 single-click"  id="size_medium" value="100"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing-Page/Step-2/Medium.png" class = "imgclass"/>
+		    	</div>
+		    	<p>Medium</p>
+		    	<span class="inner_span">(3-8 Screens)</span>
+		    </div></div>
+   <div class="col-md-2 col-sm-4 col-xs-4">
+   	<div class="div8 single-click" id="size_large" value="100"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing-Page/Step-2/Large.png" class = "imgclass"/>
+		    	</div>
+		    	<p>Large</p>
+		    	<span class="inner_span">(9+ Screens)</span>
+		    </div>
+   </div>
+   <div class="col-md-3"></div>
+ </div>
+
+<div class="row">
+     <div class="col-md-4"><span class="glyphicon glyphicon-menu-left prev"></span>
+     <span class="prev">Prev</span></div>
+     <!-- <div class="col-md-3 triangle-up"></div> -->
+     <div class="col-md-4">
+     	<span class="next-text">Next</span>
+    	 <span class="glyphicon glyphicon-menu-right next-icon" id="next"></span>
+     </div>
+ </div>
+</div> 
+
+	    <!--Third page  -->
+
+	<div class="container-fluid step" id="step-3">
+ <div class="row">
+    <div class="col-md-12"><h2>How will you handle user management?</h2>
+	<p class="select">(Select all that apply)</p> </div>
+</div>
+ <div class="row theme-four" id="third-page">
+   <div class="col-md-2"></div>
+   <div class="col-md-2 col-sm-4 col-xs-4"><div class="div9 multiple-click" id="userManagement_none"> 	
 	    	<div class="imagecontainer">
 	    		<img src="/img/Assets/Landing-Page/Step-3/n_a.png" class = "imgclass"/>
 	    	</div>
 	    	<p>N/A</p>
-	    </div>
-	    <div class="div10 a" id="userManagement_standard"> 	
+	    </div></div>
+   <div class="col-md-2 col-sm-4 col-xs-4"><div class="div10 multiple-click" id="userManagement_standard"> 	
 	    	<div class="imagecontainer">
 	    		<img src="/img/Assets/Landing-Page/Step-3/Standard.png" class = "imgclass"/>
 	    	</div>
 	    	<p>Standard</p>
-	    </div>
-	    <div class="div11 a" id="userManagement_social"> 	
+	    </div></div>
+   <div class="col-md-2 col-sm-4 col-xs-4"><div class="div11 multiple-click" id="userManagement_social"> 	
 	    	<div class="imagecontainer">
 	    		<img src="/img/Assets/Landing-Page/Step-3/Social.png" class = "imgclass"/>
 	    	</div>
 	    	<p>Social</p>
-	    </div>
-	     <div class="div12 a" id="userManagement_enterprise"> 	
+	    </div></div>
+   <div class="col-md-2 col-sm-4 col-xs-4">
+   	<div class="div12 multiple-click" id="userManagement_enterprise"> 	
 	    	<div class="imagecontainer">
 	    		<img src="/img/Assets/Landing-Page/Step-3/Enterprise.png" class = "imgclass"/>
 	    	</div>
 	    	<p>Enterprise</p>
 	    </div>
-	</div>
-	<div>
-    	 <span class="glyphicon glyphicon-menu-left"></span>
-    	 <span>Prev</span>
-    	 <span class="space"></span>
-    	 <span class="next-text">Next</span>
-    	 <span class="glyphicon glyphicon-menu-right next-icon" id="next"></span>
-    </div>
-	</div>
+   </div>
+   <div class="col-md-2"></div>
+ </div>
+
+<div class="row">
+     <div class="col-md-4"><span class="glyphicon glyphicon-menu-left prev"></span>
+     <span class="prev">Prev</span></div>
+     <!-- <div class="col-md-3 triangle-up"></div> -->
+     <div class="col-md-4">
+      <span class="next-text">Next</span>
+       <span class="glyphicon glyphicon-menu-right next-icon" id="next"></span>
+     </div>
+ </div>
+</div> 	 
+
+   <!--Fourth Page -->
+<div class="container-fluid step" id="step-4">
+ <div class="row">
+    <div class="col-md-12"><h2>What kind of data will you store?</h2>
+	<p class="select">(Select all that apply)</p></div>
 </div>
+ <div class="row theme-three" id="third-page">
+   <div class="col-md-3"></div>
+   <div class="col-md-2 col-sm-4 col-xs-4"><div class="div13 multiple-click" id="dataType_none"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing-Page/Step-4/n_a.png" class = "imgclass"/>
+		    	</div>
+		    	<p>N/A</p>
+		    	<span class="inner_span">(I am not storing any data)</span>
+		    </div></div>
+   <div class="col-md-2 col-sm-4 col-xs-4"><div class="div14 multiple-click" id="dataType_data"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing-Page/Step-4/data.png" class = "imgclass"/>
+		    	</div>
+		    	<p>Data</p>
+		    	<span class="inner_span">(Just structured data,
+		    	<br>suited for a database)</span>
+		    </div></div>
+   <div class="col-md-2 col-sm-4 col-xs-4"><div class="div15 multiple-click" id="dataType_largeFiles"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing-Page/Step-4/Large-Files.png" class = "imgclass"/>
+		    	</div>
+		    	<p>Large Files</p>
+		    	<span class="inner_span">(Structured data plus files
+		    	<br>like images,videos,etc)</span>
+		    </div></div>
+   <div class="col-md-3"></div>
+ </div>
+
+<div class="row">
+     <div class="col-md-4"><span class="glyphicon glyphicon-menu-left prev"></span>
+     <span class="prev">Prev</span></div>
+     <!-- <div class="col-md-3 triangle-up"></div> -->
+     <div class="col-md-4">
+      <span class="next-text">Next</span>
+       <span class="glyphicon glyphicon-menu-right next-icon" id="next"></span>
+     </div>
+ </div>
+</div> 
+
+<!-- Eigth-page -->
+<div class="container-fluid step" id="step-8">
+ <div class="row">
+    <div class="col-md-12"><h2>How will you engage with your users?</h2>
+	<p class="select">(Select all that apply)</p> </div>
+</div>
+ <div class="row theme-three" id="eigth-page">
+   <div class="col-md-3"></div>
+   <div class="col-md-2 col-sm-4 col-xs-4"><div class="div25 multiple-click" id="userEngagement_none"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing-Page/Step-8/n_a.png" class = "imgclass"/>
+		    	</div>
+		    	<p>N/A</p>
+		    </div></div>
+   <div class="col-md-2 col-sm-4 col-xs-4">
+   <div class="div26 multiple-click" id="userEngagement_push"> 	
+		    	<div class="imagecontainer" >
+		    		<img src="/img/Assets/Landing-Page/Step-8/Push_SMS_Email.png" class = "imgclass"/>
+		    	</div>
+		    	<p>Push,SMS,Email</p>
+		    </div></div>
+   <div class="col-md-2 col-sm-4 col-xs-4"><div class="div27 multiple-click" id="userEngagement_social"> 	
+		    	<div class="imagecontainer">
+		    		<img src="/img/Assets/Landing-Page/Step-8/Advanced_social.png" class = "imgclass"/>
+		    	</div>
+		    	<p> Advanced&nbsp;social integration</p>
+		    </div></div>
+   <div class="col-md-3"></div>
+ </div>
+
+<div class="row">
+     <div class="col-md-4"><span class="glyphicon glyphicon-menu-left prev"></span>
+     <span class="prev">Prev</span></div>
+     <!-- <div class="col-md-3 triangle-up"></div> -->
+     <div class="col-md-4">
+      <span class="next-text">Next</span>
+       <span class="glyphicon glyphicon-menu-right next-icon" id="next"></span>
+     </div>
+ </div>
+</div>
+
+<!-- Fourteenth page -->
+<div class="container-fluid step" id="step-14">
+ <div class="row">
+    <div class="col-md-12"><h2>Will your app leverage an existing backend application?</h2></div>
+</div>
+ <div class="row theme-four" id="fourteenth-page">
+   <div class="col-md-2"></div>
+   <div class="col-md-2 col-sm-4 col-xs-4"><div class="div39 single-click" id="backend_none">  	
+	    	<div class="imagecontainer">
+	    		<img src="/img/Assets/Landing-Page/Step-14/No_major_backend_logic.png" class = "imgclass"/>
+	    	</div>
+	    	<p>No major backend logic</p>
+	    </div></div>
+   <div class="col-md-2 col-sm-4 col-xs-4"><div class="div40 single-click" id="backend_builtWithService"> 	
+	    	<div class="imagecontainer">
+	    		<img src="/img/Assets/Landing-Page/Step-14/with_ready_service.png" class = "imgclass"/>
+	    	</div>
+	    	<p>Backend build with ready services</p>
+	    </div></div>
+   <div class="col-md-2 col-sm-4 col-xs-4"><div class="div41 single-click" id="backend_builtWithoutService"> 	
+	    	<div class="imagecontainer">
+	    		<img src="/img/Assets/Landing-Page/Step-14/not_service_enabled.png" class = "imgclass"/>
+	    	</div>
+	    	<p>Backend build not service enabled</p>
+	    </div></div>
+   <div class="col-md-2 col-sm-4 col-xs-4">
+   	<div class="div42 single-click" id="backend_toCreate"> 	
+	    	<div class="imagecontainer">
+	    		<img src="/img/Assets/Landing-Page/Step-14/needs_to_be_created.png" class = "imgclass"/>
+	    	</div>
+	    	<p>Backend&nbsp;needs  to be created</p>
+	    </div>
+   </div>
+   <div class="col-md-2"></div>
+ </div>
+
+<div class="row">
+     <div class="col-md-4"><span class="glyphicon glyphicon-menu-left prev"></span>
+     <span class="prev">Prev</span></div>
+     <!-- <div class="col-md-3 triangle-up"></div> -->
+     <div class="col-md-4">
+      <span class="next-text">Next</span>
+       <span class="glyphicon glyphicon-menu-right next-icon" id="next"></span>
+     </div>
+ </div>
+</div> 	 
+
+    
+<!-- Main div ending  -->
+</div>
+  
 <div class = "progress-bar-container">
 	<span class="background"></span>
 </div>
-<!-- <footer>
-    <div class="bottom-footer">
-      <h6 class="hi-footerfont">
-        &copy; <span class = "white">Hashed</span><span class="orange">In</span> Technologies Pvt. Ltd., 2015
-      </h6>
-    </div>
-</footer>  -->
+
   <!-- build:js scripts/vendor.js -->
   <!-- bower:js -->
   <script src="libs/jquery/dist/jquery.js"></script>
